<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/defPage_entries"
        android:entryValues="@array/defPage_values"
        android:key="@string/defPageListKey"
        android:summary="@string/defPageSummary"
        android:title="@string/defPageTitle" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/nightModel_entries"
        android:entryValues="@array/nightMode_values"
        android:key="@string/nightModeListKey"
        android:summary="@string/nightModeSummary"
        android:title="@string/nightModeTitle" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/bannerAdKey"
        android:summary="@string/adSummaryActive"
        android:title="@string/adActivityTitle" />

    <Preference
        android:key="@string/autoUpdatePrefKey"
        android:summary="@string/autoUpdateSummary"
        android:title="@string/autoUpdateTitle" />
</PreferenceScreen>