<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_daily_list">

    <fragment
        android:id="@+id/nav_daily_list"
        android:name="com.tekinumut.cuyemekhane.ui.DailyListFragment"
        android:label="@string/daily_action_title"
        tools:layout="@layout/fragment_daily_list">
        <action
            android:id="@+id/action_nav_daily_list_to_componentFragment"
            app:destination="@id/componentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_monthly_list"
        android:name="com.tekinumut.cuyemekhane.ui.MonthlyListFragment"
        android:label="@string/monthly_action_title"
        tools:layout="@layout/fragment_monthly_list">
        <action
            android:id="@+id/action_nav_monthly_list_to_componentFragment"
            app:destination="@id/componentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/nav_duyurular"
        android:name="com.tekinumut.cuyemekhane.ui.DuyurularFragment"
        android:label="@string/duyurular_action_title"
        tools:layout="@layout/fragment_duyurular" />

    <fragment
        android:id="@+id/componentFragment"
        android:name="com.tekinumut.cuyemekhane.ui.ComponentFragment"
        android:label="@string/food_component_title"
        tools:layout="@layout/fragment_dm_component" />



</navigation>