<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.tekinumut.cuyemekhane.viewmodel.RewardAdDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvWatchAdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/disable_banner_title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWatchAdContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/disable_banner_content"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWatchAdTitle" />

        <Button
            android:id="@+id/btnRejectRemoveBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_btn_red"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/iptal_et"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnAcceptRemoveBanner"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/tvWatchAdContent"
            app:layout_constraintTop_toBottomOf="@+id/tvWatchAdContent" />

        <Button
            android:id="@+id/btnAcceptRemoveBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="@{viewmodel.adStatus == 1 ? 1.0f : 0.5f}"
            android:background="@drawable/rounded_btn_green"
            android:enabled="@{viewmodel.adStatus == 1 ? true : false}"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/kabul_et"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnRejectRemoveBanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnRejectRemoveBanner"
            app:layout_constraintTop_toTopOf="@+id/btnRejectRemoveBanner" />

        <LinearLayout
            android:id="@+id/llAdLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="@{viewmodel.adStatus == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@+id/btnAcceptRemoveBanner"
            app:layout_constraintStart_toStartOf="@+id/btnRejectRemoveBanner"
            app:layout_constraintTop_toBottomOf="@+id/btnRejectRemoveBanner"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminateTint="@color/button_blue"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/reward_ad_loading"
                android:textColor="@color/default_bg_opposite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdErrorRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="@{viewmodel.adStatus == 2 ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@+id/btnAcceptRemoveBanner"
            app:layout_constraintStart_toStartOf="@+id/btnRejectRemoveBanner"
            app:layout_constraintTop_toBottomOf="@+id/btnRejectRemoveBanner"
            tools:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ad_load_fail_try_again"
                android:textColor="@color/red" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>