<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="aboutVm"
            type="com.tekinumut.cuyemekhane.ui.draweritems.about.AboutViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="@dimen/dp10">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/about_logo_size"
                android:layout_height="@dimen/about_logo_size"
                android:layout_marginTop="@dimen/dp10"
                android:src="@drawable/ic_user_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prog_kullanimi"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_user_guide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:lineSpacingExtra="4dp"
                android:maxLines="@{aboutVm.isLess ? 5 : Integer.MAX_VALUE}"
                android:text="@string/kullanim_kilavuzu"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:maxLines="5" />

            <TextView
                android:id="@+id/click_to_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:drawableStart="@{aboutVm.isLess ? @drawable/ic_expand_more : @drawable/ic_expand_less }"
                android:gravity="center"
                android:onClick="@{() -> aboutVm.updateExpandVal()}"
                android:text="@{aboutVm.isLess ? @string/expand_more : @string/expand_less}"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_guide"
                tools:drawableStart="@drawable/ic_expand_more"
                tools:text="@string/expand_more" />

            <TextView
                android:id="@+id/send_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:drawableStart="@drawable/ic_gmail"
                android:drawablePadding="@dimen/dp15"
                android:gravity="center|start"
                android:text="@string/send_feedback"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/click_to_expand" />

            <TextView
                android:id="@+id/rate_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:drawableStart="@drawable/ic_google_play"
                android:drawablePadding="@dimen/dp15"
                android:gravity="center|start"
                android:text="@string/rate_app"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/send_feedback" />

            <TextView
                android:id="@+id/github_source_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:drawableStart="@drawable/ic_github_logo"
                android:drawablePadding="@dimen/dp15"
                android:gravity="center|start"
                android:text="@string/github_source_code"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sp18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rate_app" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>